Fix/cleanup Makefile
I encountered some build errors/warnings on my system as a result of building the project outside of the original source location. The following improvements are made to the Makefile:

- The "c" target now runs `phpize` and `configure`
- Added an `all` target that builds `cgo` and `c`
- Separated installation out into an `install` target
- Added a `clean` target to delete build artifacts
- Added `/c/main.dep` and `/c/Makefile` to `.gitignore`

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,9 @@
 /c/configure
 /c/configure.ac
 /c/libtool
+/c/main.dep
 /c/main.lo
+/c/Makefile
 /c/Makefile.fragments
 /c/Makefile.objects
 /c/my_module.la
